--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+
 :root {
   --color-bg: #272643;
   --color-input: #ffffff1a;
@@ -18,6 +20,72 @@ html, body {
   height: 100%;
 }
 
-body {
-  background-color: var(--color-bg);
+body{
+    background: #272643;
+    display: grid;
+    height: 100vh;
+    grid-template-rows: 1fr 2fr 1fr   ;
+    grid-template-columns: 1fr 1fr 4fr 1fr 1fr;
+
+}
+
+
+
+
+
+.logo{
+    width: 196px;
+    height: 56px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 56px;
+
+    color: #57dee7;
+}
+.content{
+    grid-area: 2/ 3 /  2 /  3;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.content .text{
+        align-items: center;
+        justify-content: center;
+}
+.content h1{
+    
+    height: 40%;
+    font-family: Roboto;
+    font-weight:700;
+    color: white;
+}
+#city_input{
+    font-family: Roboto;
+    font-weight:700;
+    font-size: 12px;
+    background: rgba(61, 87, 107, 0.643);
+    border:none;
+    outline:none;
+    border-radius: 11px;
+    height: 7vh;
+    width: 80%;
+    color: white;
+    font-size: 1.3rem;
+    text-align: center;
+}
+#submit_city{
+    font-family: Roboto;
+    font-weight:400;
+    
+    color: white;
+    font-size: 1.4rem;
+    height: 7vh;
+    width: 30%;
+    background: #2C698D;
+    border-radius: 10px;
+    border: none;
 }
